--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -14,13 +14,12 @@ header{
 
 #bg{
     grid-area: left;
-
-    background: url('/assets/img/home-bg-img.svg') no-repeat top/contain;
+    background: url('../img/home-bg-img.svg') no-repeat top/contain;
+    background-position: -5rem;
 }
 
 main{
     grid-area: right;
-    
     display: flex;
     align-items: center;
 }
@@ -49,14 +48,45 @@ button,
     margin-bottom: 1.8rem;
 }
 
-.content header{
-    width: 80%;
-    margin: 3.5rem auto;
+/* Separator line */
+
+.separator{
+    display: flex;
+    align-items: center;
+    margin: 4rem 0;
 }
 
-.content header img{
-    width:  16.7rem;
+.separator div:nth-child(2){
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding: 0 1.35rem;
+    line-height: 0;
+}
+ .separator div:nth-child(odd){
+     background-color: var(--grey-blue);
+     width: 100%;
+     height: .1rem;
+ }
+
+ /* Create balls of bg */
+.ball{
+    width: 21.2rem;
+    height: 21.2rem;
+    background-color: var(--blue);
+    position: fixed;
+    clip-path: circle();
+    opacity: 0.1;
 }
 
- 
+.ball.top{
+    width: 63.3rem;
+    height: 63.3rem;
+    top: -43rem;
+    right: -37rem;
+}
 
+.ball.bottom{
+    bottom: -15rem;
+    right: 5.6rem;
+}
