:sparkles: Update room.html styles fo questions

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -11,7 +11,7 @@ html{
     --black: #0D114F;
     --white: #FAFAFA;
     --red: #E83F5B;
-    --light-blu: #E0ECFF;
+    --light-blue: #E0ECFF;
     --blue: #3485FF;
     --background: #FBFCFF;
     --overlay: #040911;
