--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- =========================== STYLESHEET =========================== -->
-    <link rel="stylesheet" type="text/css" href="./styles/global.css">
-    <link rel="stylesheet" type="text/css" href="./styles/room.css">
-    <link rel="stylesheet" type="text/css" href="./styles/modal.css">
+    <link rel="stylesheet" type="text/css" href="/styles/global.css">
+    <link rel="stylesheet" type="text/css" href="/styles/room.css">
+    <link rel="stylesheet" type="text/css" href="/styles/modal.css">
 
     <!-- ========================= GOOGLE FONTS ============== ============= -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- SCRIPT -->
+    <script src="/scripts/main.js" defer type="module"></script>
 
     <title>Rocket.Q - P&R</title>
 </head>
@@ -21,17 +24,17 @@
     <div id="room" class="content">
         <header>
             <a href="#">
-                <img src="./img/logo.svg" alt="logotipo da Rocket.Q">
+                <img src="/img/logo.svg" alt="logotipo da Rocket.Q">
             </a>
 
             <div class="buttons">
-                <div class="button outlined">
+                <div id="room-id" data-id="323243" class="button outlined">
                     #323243
-                    <img src="./img/copy.svg" alt=" Copiar número da sala">
+                    <img src="/img/copy.svg" alt=" Copiar número da sala">
                 </div>
 
                 <a class="button" href="#">
-                    <img src="./img/users_white.svg" alt="Criar uma sala">
+                    <img src="/img/users_white.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
             </div>
@@ -45,7 +48,7 @@
                     <textarea name="question" id="question" placeholder="O que você quer perguntar"></textarea>
                     <footer>
                         <div>
-                            <img src="./img/lock.svg" alt="Cadeado">
+                            <img src="/img/lock.svg" alt="Cadeado">
                             Esta pergunta é anônima
                         </div>
                         <button>Enviar</button>
@@ -60,19 +63,19 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="./img/user.svg" alt="Avatar do usuário">
+                                <img src="/img/user.svg" alt="Avatar do usuário">
                             </div>
                             <div class="question">
                                 <p>Qual a diferençá entre const, var e let no Javascript</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#">
-                                <img src="./img/check.svg" alt="Marcar como lida">
+                            <a class="check" href="#" data-id="2">
+                                <img src="/img/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a class="delete" href="#">
-                                <img src="./img/trash.svg" alt="Excluir">
+                            <a class="delete" href="#" data-id="2">
+                                <img src="/img/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -82,19 +85,19 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="./img/user.svg" alt="Avatar do usuário">
+                                <img src="/img/user.svg" alt="Avatar do usuário">
                             </div>
                             <div class="question">
                                 <p>O que é Javascript</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#">
-                                <img src="./img/check.svg" alt="Marcar como lida">
+                            <a class="check" href="#" data-id="3">
+                                <img src="/img/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a class="delete" href="#">
-                                <img src="./img/trash.svg" alt="Excluir">
+                            <a class="delete" href="#" data-id="3">
+                                <img src="/img/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -104,37 +107,37 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="./img/user.svg" alt="Avatar do usuário">
+                                <img src="/img/user.svg" alt="Avatar do usuário">
                             </div>
                             <div class="question">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime consequatur consectetur beatae. Cum dignissimos ratione amet, explicabo veritatis labore. Iure dignissimos quae, nisi blanditiis assumenda ipsam, impedit quia non rerum sint perferendis tempore quibusdam?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#">
-                                <img src="./img/check.svg" alt="Marcar como lida">
+                            <a class="check" href="#" data-id="4" >
+                                <img src="/img/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a class="delete" href="#">
-                                <img src="./img/trash.svg" alt="Excluir">
+                            <a class="delete" href="#" data-id="4">
+                                <img src="/img/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
                     </div>
 
                     <!-- ====================== QUARTA QUESTÃO ============================ -->
-                    <div class="question-wrapper read">
+                    <div  class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="./img/user.svg" alt="Avatar do usuário">
+                                <img src="/img/user.svg" alt="Avatar do usuário">
                             </div>
                             <div class="question">
                                 <p>O que é Typescript</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="delete" href="#">
-                                <img src="./img/trash.svg" alt="Excluir">
+                            <a class="delete" href="#" data-id="1">
+                                <img src="/img/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -148,20 +151,20 @@
         <div class="modal">
             <h2>Excluir estar pergunta</h2>
             <p>Tem certeza de que você deseja excluir esta pergunta?</p>
-            <form action="" method="POST">
+            
+            <form action="#" method="POST">
                 <label for="password" class="sr-only">Digite a sua senha de admin</label>
                 <input type="password" name="password" id="password" placeholder="Digite sua senha">
-            </form>
 
-            <div class="buttons">
-                <div class="button grey cancel">Cancelar</div>
-                <button class="red">Sim, excluir</button>
-            </div>
+                <div class="buttons">
+                    <div class="button grey cancel">Cancelar</div>
+                    <button class="red">Sim, excluir</button>
+                </div>
+            </form>
+            
         </div>
     </div>
 
 
-    <!-- SCRIPT -->
-    <script src="scripts/main.js" defer type="module"></script>
 </body>
 </html>
