--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -144,3 +144,30 @@
 .question-wrapper.read .question-content .user{
     background-color: var(--grey-blue);
 }
+
+/* No Questions */
+
+.no-questions{
+    text-align: center;
+    margin-top: 5.2rem;
+}
+
+.no-questions img{
+    max-width: 100%;
+    margin-bottom: 1.2rem;
+}
+
+.no-questions p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.no-questions p + p{
+    margin-top: 1.3rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.9rem;
+    color: var(--grey-dark);
+}
