--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- =========================== STYLESHEET =========================== -->
-    <link rel="stylesheet" type="text/css" href="./styles/global.css">
-    <link rel="stylesheet" type="text/css" href="./styles/home.css">
+    <link rel="stylesheet" type="text/css" href="/styles/global.css">
+    <link rel="stylesheet" type="text/css" href="/styles/home.css">
 
     <!-- ========================= GOOGLE FONTS =========================== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,9 @@
 <body>
     <div id="home" class="content">
         <header>
-            <img src="./img/logo.svg" alt="logotipo da Rocket.Q">
+            <a href="/">
+                <img src="/img/logo.svg" alt="logotipo da Rocket.Q">
+            </a>
         </header>
 
         <div id="bg">
