--- a/src/views/parts/create-pass.ejs
+++ b/src/views/parts/create-pass.ejs
@@ -1,10 +1,10 @@
 <section>
     <h2>Crie sua própria sala</h2>
-    <form action="/room/create-room">
+    <form action="/create-room" method="POST">
         <label class="sr-only"for="pass__input">Insira uma senha</label>
-        <input id="pass__input" type="number" placeholder="Insira uma senha">
+        <input id="room-pass" type="password" name="password" placeholder="Insira uma senha">
         <button>
-            <img src="./img/users_white.svg" alt="Criar na sala"> Criar sala
+            <img src="/img/users_white.svg" alt="Criar na sala"> Criar sala
         </button>
     </form>
 </section>
