--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -28,12 +28,12 @@
             </a>
 
             <div class="buttons">
-                <div id="room-id" data-id="323243" class="button outlined">
-                    #323243
+                <div id="room-id" data-id="<%= roomId %>" class="button outlined">
+                    #<%= roomId %>
                     <img src="/img/copy.svg" alt=" Copiar número da sala">
                 </div>
 
-                <a class="button" href="#">
+                <a class="button" href="/create-pass">
                     <img src="/img/users_white.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
@@ -43,7 +43,7 @@
         <main>
             <section id="question-form">
                 <h2>Faça a sua pergunta</h2>
-                <form action="">
+                <form action="/question/create/<%= roomId%>" method="POST">
                     <label for="question" class="sr-only">O que você quer perguntar</label>
                     <textarea name="question" id="question" placeholder="O que você quer perguntar"></textarea>
                     <footer>
@@ -59,89 +59,59 @@
             <section class="questions">
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
-                    <!-- ====================== PRIMEIRA QUESTÃO ============================ -->
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/img/user.svg" alt="Avatar do usuário">
-                            </div>
-                            <div class="question">
-                                <p>Qual a diferençá entre const, var e let no Javascript</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a class="check" href="#" data-id="2">
-                                <img src="/img/check.svg" alt="Marcar como lida">
-                                Marcar como lida
-                            </a>
-                            <a class="delete" href="#" data-id="2">
-                                <img src="/img/trash.svg" alt="Excluir">
-                                Excluir
-                            </a>
-                        </div>
-                    </div>
-                    
-                    <!-- ====================== SEGUNDA QUESTÃO ============================ -->
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/img/user.svg" alt="Avatar do usuário">
-                            </div>
-                            <div class="question">
-                                <p>O que é Javascript</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a class="check" href="#" data-id="3">
-                                <img src="/img/check.svg" alt="Marcar como lida">
-                                Marcar como lida
-                            </a>
-                            <a class="delete" href="#" data-id="3">
-                                <img src="/img/trash.svg" alt="Excluir">
-                                Excluir
-                            </a>
-                        </div>
-                    </div>
 
-                    <!-- ====================== TERCEIRA QUESTÃO ============================ -->
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/img/user.svg" alt="Avatar do usuário">
-                            </div>
-                            <div class="question">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime consequatur consectetur beatae. Cum dignissimos ratione amet, explicabo veritatis labore. Iure dignissimos quae, nisi blanditiis assumenda ipsam, impedit quia non rerum sint perferendis tempore quibusdam?</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a class="check" href="#" data-id="4" >
-                                <img src="/img/check.svg" alt="Marcar como lida">
-                                Marcar como lida
-                            </a>
-                            <a class="delete" href="#" data-id="4">
-                                <img src="/img/trash.svg" alt="Excluir">
-                                Excluir
-                            </a>
-                        </div>
-                    </div>
+                    <% if(isNoQuestions){ %>
+                        <%- include('parts/no-question')%>
+                    <% } %>
 
-                    <!-- ====================== QUARTA QUESTÃO ============================ -->
-                    <div  class="question-wrapper read">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/img/user.svg" alt="Avatar do usuário">
+                    <% questions.forEach(question => {%>
+                        
+                        <!-- ====================== PRIMEIRA QUESTÃO ============================ -->
+                        <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/img/user.svg" alt="Avatar do usuário">
+                                </div>
+                                <div class="question">
+                                    <p><%= question.title %></p>
+                                </div>
                             </div>
-                            <div class="question">
-                                <p>O que é Typescript</p>
+                            <div class="actions">
+                                <a class="check" href="#" data-id="<%= question.id %>">
+                                    <img src="/img/check.svg" alt="Marcar como lida">
+                                    Marcar como lida
+                                </a>
+                                <a class="delete" href="#" data-id="<%= question.id %>">
+                                    <img src="/img/trash.svg" alt="Excluir">
+                                    Excluir
+                                </a>
                             </div>
                         </div>
-                        <div class="actions">
-                            <a class="delete" href="#" data-id="1">
-                                <img src="/img/trash.svg" alt="Excluir">
-                                Excluir
-                            </a>
+                        
+                    <% }); %>
+
+                    <% questionsRead.forEach(questionRead => {%>
+
+                        <!-- ====================== QUESTION WRAPPER ============================ -->
+                        <div  class="question-wrapper read">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/img/user.svg" alt="Avatar do usuário">
+                                </div>
+                                <div class="question">
+                                    <p><%= questionRead.title %></p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <a class="delete" href="#" data-id="<%= questionRead.id %>">
+                                    <img src="/img/trash.svg" alt="Excluir">
+                                    Excluir
+                                </a>
+                            </div>
                         </div>
-                    </div>
+
+                    <% }); %>
+
                 </div>
             </section>
         </main>
